# rs-matching-engine

./: Cargo.toml  README.md  fix.py  fix2.py  patch.py  patch_bench.py
benches/: bench_order_book.rs  cpp_like_bench.rs
src/: bitmap.rs  buffer.rs  buffered_sheduler.rs  error.rs  lib.rs  main.rs  mpmc.rs  order.rs  order_book.rs  server.rs  sheduler.rs  strategy.rs  tcp_server.rs  unique_id.rs  worker.rs
tests/: verify_correctness.rs
